<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="225dp"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@null"
	app:cardCornerRadius="10dp"
	app:cardElevation="10dp">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
		<TextView
			android:id="@+id/source"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			android:paddingBottom="8dp"
			android:textAppearance="?android:textAppearanceSmall"
			android:gravity="center"
			android:text="@string/select_image_source"
			app:layout_constraintTop_toTopOf="parent"/>
		<androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_camera"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_camera"
                app:layout_constraintTop_toBottomOf="@id/source"
                app:layout_constraintStart_toStartOf="@id/guideline_25_horizontal"
                app:layout_constraintEnd_toEndOf="@id/guideline_25_horizontal"/>
		<androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_gallery"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_gallery"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/source"
                app:layout_constraintStart_toStartOf="@id/guideline_75_horizontal"
                app:layout_constraintEnd_toEndOf="@id/guideline_75_horizontal"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/camera"
			android:textColor="@color/colorPrimaryDark"
			android:textAppearance="?android:textAppearanceSmall"
			android:layout_below="@id/btn_camera"
			app:layout_constraintTop_toBottomOf="@id/btn_camera"
			app:layout_constraintStart_toStartOf="@id/guideline_25_horizontal"
			app:layout_constraintEnd_toEndOf="@id/guideline_25_horizontal"
			android:paddingBottom="16dp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gallery"
			android:textColor="@color/colorPrimaryDark"
			android:textAppearance="?android:textAppearanceSmall"
			android:layout_below="@id/btn_gallery"
			app:layout_constraintTop_toBottomOf="@id/btn_gallery"
			app:layout_constraintStart_toStartOf="@id/guideline_75_horizontal"
			app:layout_constraintEnd_toEndOf="@id/guideline_75_horizontal"
			android:paddingTop="6dp"
			android:paddingBottom="16dp"/>

		<!-- Constraint Guideline-->
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_50_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.50" />
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_50_vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.50" />
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_25_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.30" />
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_75_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.70"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>